--- a/firma_Richard.html
+++ b/firma_Richard.html
@@ -1,62 +1,12 @@
-<sign signid="0">
-
-
-<table style="color: rgb(0, 0, 0); font-size: 14px;" width="680" cellspacing="0" cellpadding="0" border="0">
-        <tbody>
-            <tr>
-                <td width="226">
-                    
-                    <p  style="margin: 0cm 0cm 0.0001pt;"><font size="3" >
-                        <font> 
-                            <span style="color: navy; background-image: initial; background-position: initial; background-size: initial; background-repeat: initial; background-attachment: initial; background-origin: initial; background-clip: initial;vertical-align: top;">
-                                <b>Richard Miguel Méndez Castillo</b>
-                            </span>
-                        </font>
-                    </font>
-                </p>
-                
-                <p  style="margin: 0.05cm 0.4cm 0.0001pt; font-size: 10pt;"><font>
-                        <span style="color: navy; background-image: initial; background-position: initial; background-size: initial; background-repeat: initial; background-attachment: initial; background-origin: initial; background-clip: initial;">
-                            <strong>Email:&nbsp;</strong> <a href="mailto:richard@cimab.cu" style="color: rgb(0, 0, 128); display: inline; background-color: rgba(0, 0, 0, 0);">richard@cimab.cu</a><br>
-                            <strong>Phone:&nbsp;</strong> <a href="tel:+5350948772" style="color: rgb(0, 0, 128); display: inline; background-color: rgba(0, 0, 0, 0);">(+53)50948772</a><br>
-                            <strong>Whatsapp:&nbsp;</strong> <a href="https://wa.me/5350948772" style="color: rgb(0, 0, 128); display: inline; background-color: rgba(0, 0, 0, 0);">(+53)50948772</a><br>
-                            <strong>WeChat:&nbsp;</strong> <a href="https://u.wechat.com/kDnxd4RG15P9Hb8ffv5Kr70" style="color: rgb(0, 0, 128); display: inline; background-color: rgba(0, 0, 0, 0);">(+53)50948772</a>
-                        </span>
-                    </font></p>
-
-
-
-
-                </td>
-                <td width="350">
-                    <p  style="margin: 0cm 0cm 0.0001pt; font-size: 12pt;">    
-                    <span><font ><img src="http://richardcimab.github.io/mailsignature/wechat202402.jpg" style="border: none; vertical-align: bottom;" onerror="" width="90" height="90" border="1"><o:p></o:p></font></span>
-                    </p>
-                </td>
-            </tr>
-        </tbody>
-</table>
-
-
-<table style="color: rgb(0, 0, 0); font-size: 14px;" width="680" cellspacing="0" cellpadding="0" border="0">
-        <tbody>
-            <tr>
-                <td width="226">
-                    <p  style="margin: 0cm 0cm 0.0001pt; font-size: 12pt;">    
-                    <span><font ><img src="http://richardcimab.github.io/mailsignature/cimab_logo01.png" style="border: none; vertical-align: middle;" onerror="" width="229" height="80" border="0"><o:p></o:p></font></span>
-                    </p>
-                </td>
-                <td width="395" valign="bottom"><p  style="line-height: 15pt; margin: 0cm 0cm 0.0001pt; font-size: 12pt;">
-                    <span style="font-size: 9pt; color: rgb(29, 32, 136);">
-                        <font>Calle 206 No. 1926 e/ 19 y 21 
-                            <span><br>Atabey, Playa<br>La Habana, Cuba</span>
-                        </font>
-                    </span>
-                    </p>
-                </td>
-            </tr>
-        </tbody>
-</table>
-
-
-</sign>
+<table style="color: rgb(0, 0, 0); font-size: 14px;" width="400" cellspacing="0" cellpadding="0" border="0"><tbody><tr><td width="229">
+<p style="margin: 0cm 0cm 0cm;"><font size="3"><span style="color: navy; background-image: initial; background-position: initial; background-size: initial; background-repeat: initial; background-attachment: initial; background-origin: initial; background-clip: initial;vertical-align: top;">
+<b>Richard Miguel Méndez Castillo</b></span></font></p>
+<p style="margin: 0.05cm 0.4cm 0cm; font-size: 10pt;"><span style="color: navy; background-image: initial; background-position: initial; background-size: initial; background-repeat: initial; background-attachment: initial; background-origin: initial; background-clip: initial;">
+<strong>Email:&nbsp;</strong><a href="mailto:richard@cimab.cu" style="color: rgb(0, 0, 128); display: inline; background-color: rgba(0, 0, 0, 0);">richard@cimab.cu</a><br>
+<strong>Phone:&nbsp;</strong><a href="tel:+5350948772" style="color: rgb(0, 0, 128); display: inline; background-color: rgba(0, 0, 0, 0);">(+53)50948772</a><br>
+<strong>Whatsapp:&nbsp;</strong><a href="https://wa.me/5350948772" target="_blank" style="color: rgb(0, 0, 128); display: inline; background-color: rgba(0, 0, 0, 0);">(+53)50948772</a><br>
+<strong>WeChat:&nbsp;</strong><a href="https://u.wechat.com/kDnxd4RG15P9Hb8ffv5Kr70" target="_blank" style="color: rgb(0, 0, 128); display: inline; background-color: rgba(0, 0, 0, 0);">(+53)50948772</a>
+</span></p></td><td width="171">
+<p style="margin: 4px 0.25cm 0.0001pt; font-size: 12pt;"><span><img src="http://richardcimab.github.io/mailsignature/wechat202402.jpg" style="border: none; vertical-align: bottom;" onerror="" width="85" height="85" border="1"></span></p></td></tr><tr><td width="229">
+<p style="margin: 0cm 0cm 0.0001pt; font-size: 12pt;"><span><img src="http://richardcimab.github.io/mailsignature/cimab_logo01.png" style="border: none; vertical-align: middle;" onerror="" width="229" height="78" border="0"></span></p></td>
+<td width="171" valign="bottom" style="line-height: 15pt;"><p style="font-size: 9pt; color: rgb(29, 32, 136); margin: 0cm 0.25cm -4pt;"><span>Calle 206 No. 1926 e/ 19 y 21<br>Atabey, Playa<br>La Habana, Cuba</span></p></td></tr></tbody></table>
